# android_device_samsung_pontesolo

./: Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  cm.mk  device.mk  extract-files.sh  full_pontesolo.mk  mkbootimg.mk  releasetools.py  system.prop  vendorsetup.sh
audio/: audio_platform_info.xml  audio_policy.conf  mixer_paths.xml
bluetooth/: bdroid_buildcfg.h  vnd_pontesolo.txt
configs/: swap.sh
init/: init_pontesolo.c
liblights/: lights.c
libsensors/: AccelerometerSensor.cpp  AccelerometerSensor.h  AkmSensor.cpp  (+30 more)
sensord-1.1.17/: CMakeLists.txt  sensor_plugins.xml.in  sensord.efl  sensord.manifest  sensors.xml.in  virtual_sensors.xml.in
sensord-1.1.17/packaging/: sensord.service  sensord.socket  sensord.spec
sensord-1.1.17/src/: CMakeLists.txt
sensord-1.1.17/src/accel/: CMakeLists.txt  accel_sensor.cpp  accel_sensor.h  accel_sensor_hal.cpp  accel_sensor_hal.h
sensord-1.1.17/src/auto_rotation/: CMakeLists.txt  auto_rotation_alg.cpp  auto_rotation_alg.h  auto_rotation_alg_emul.cpp  auto_rotation_alg_emul.h  auto_rotation_sensor.cpp  auto_rotation_sensor.h
sensord-1.1.17/src/bio/: CMakeLists.txt  bio_data_reader.cpp  bio_data_reader.h  bio_data_reader_adi.cpp  bio_data_reader_adi.h  bio_data_reader_standard.cpp  bio_data_reader_standard.h  bio_sensor.cpp  bio_sensor.h  bio_sensor_hal.cpp  bio_sensor_hal.h
sensord-1.1.17/src/bio_hrm/: CMakeLists.txt  bio_hrm_phy_sensor.cpp  bio_hrm_phy_sensor.h  bio_hrm_sensor_hal.cpp  bio_hrm_sensor_hal.h  bio_hrm_virt_sensor.cpp  bio_hrm_virt_sensor.h  hrm_alg.cpp  hrm_alg.h  hrm_alg_adi.cpp  hrm_alg_adi.h  hrm_alg_maxim.cpp  hrm_alg_maxim.h
sensord-1.1.17/src/context/: CMakeLists.txt  context_sensor.cpp  context_sensor.h  context_sensor_hal.cpp  context_sensor_hal.h
sensord-1.1.17/src/dust/: CMakeLists.txt  dust_sensor.cpp  dust_sensor.h  dust_sensor_hal.cpp  dust_sensor_hal.h
sensord-1.1.17/src/geo/: CMakeLists.txt  geo_sensor.cpp  geo_sensor.h  geo_sensor_hal.cpp  geo_sensor_hal.h
sensord-1.1.17/src/gravity/: CMakeLists.txt  gravity_sensor.cpp  gravity_sensor.h
sensord-1.1.17/src/gyro/: CMakeLists.txt  gyro_sensor.cpp  gyro_sensor.h  gyro_sensor_hal.cpp  gyro_sensor_hal.h
sensord-1.1.17/src/humidity/: CMakeLists.txt  humidity_sensor.cpp  humidity_sensor.h  humidity_sensor_hal.cpp  humidity_sensor_hal.h
sensord-1.1.17/src/libsensord/: CMakeLists.txt  client.cpp  client_common.cpp  client_common.h  command_channel.cpp  command_channel.h  creg_event_info.h  csensor_event_listener.cpp  csensor_event_listener.h  csensor_handle_info.cpp  csensor_handle_info.h  poller.cpp  poller.h  sensor.pc.in  sensor_accel.h  sensor_auto_rotation.h  sensor_bio.h  sensor_bio_hrm.h  sensor_bio_led_green.h  sensor_context.h  sensor_dust.h  sensor_flat.h  sensor_geomag.h  sensor_gravity.h  sensor_gyro.h  sensor_humidity.h  sensor_info_manager.cpp  sensor_info_manager.h  sensor_internal.h  sensor_internal_deprecated.h  sensor_light.h  sensor_linear_accel.h  sensor_motion.h  sensor_orientation.h  sensor_pedo.h  sensor_pir.h  sensor_pir_long.h  sensor_pressure.h  sensor_proxi.h  sensor_rv.h  (+5 more)
sensord-1.1.17/src/light/: CMakeLists.txt  light_sensor.cpp  light_sensor.h  light_sensor_hal.cpp  light_sensor_hal.h
sensord-1.1.17/src/linear_accel/: CMakeLists.txt  linear_accel_sensor.cpp  linear_accel_sensor.h
sensord-1.1.17/src/motion/: CMakeLists.txt  motion_sensor.cpp  motion_sensor.h
sensord-1.1.17/src/orientation/: CMakeLists.txt  orientation_sensor.cpp  orientation_sensor.h
sensord-1.1.17/src/pir/: CMakeLists.txt  pir_sensor.cpp  pir_sensor.h  pir_sensor_hal.cpp  pir_sensor_hal.h
sensord-1.1.17/src/pir_long/: CMakeLists.txt  pir_long_sensor.cpp  pir_long_sensor.h  pir_long_sensor_hal.cpp  pir_long_sensor_hal.h
sensord-1.1.17/src/pressure/: CMakeLists.txt  pressure_sensor.cpp  pressure_sensor.h  pressure_sensor_hal.cpp  pressure_sensor_hal.h
sensord-1.1.17/src/proxi/: CMakeLists.txt  proxi_sensor.cpp  proxi_sensor.h  proxi_sensor_hal.cpp  proxi_sensor_hal.h
sensord-1.1.17/src/rotation_vector/: CMakeLists.txt
sensord-1.1.17/src/rotation_vector/rv/: CMakeLists.txt  rv_sensor.cpp  rv_sensor.h
sensord-1.1.17/src/rotation_vector/rv_raw/: CMakeLists.txt  rv_raw_sensor.cpp  rv_raw_sensor.h  rv_raw_sensor_hal.cpp  rv_raw_sensor_hal.h
sensord-1.1.17/src/sensor_fusion/: CMakeLists.txt  euler_angles.cpp  euler_angles.h  matrix.cpp  matrix.h  orientation_filter.cpp  orientation_filter.h  quaternion.cpp  quaternion.h  rotation_matrix.cpp  rotation_matrix.h  sensor_data.cpp  sensor_data.h  vector.cpp  vector.h
sensord-1.1.17/src/server/: CMakeLists.txt  command_worker.cpp  command_worker.h  dbus_util.cpp  dbus_util.h  main.cpp  permission_checker.cpp  permission_checker.h  server.cpp  server.h
sensord-1.1.17/src/shared/: CMakeLists.txt  cbase_lock.cpp  cbase_lock.h  cclient_info_manager.cpp  cclient_info_manager.h  cclient_sensor_record.cpp  cclient_sensor_record.h  cconfig.cpp  cconfig.h  cinterval_info_list.cpp  cinterval_info_list.h  cmutex.cpp  cmutex.h  common.cpp  common.h  cpacket.cpp  cpacket.h  crw_lock.cpp  crw_lock.h  csensor_config.cpp  csensor_config.h  csensor_event_dispatcher.cpp  csensor_event_dispatcher.h  csensor_event_queue.cpp  csensor_event_queue.h  csensor_usage.cpp  csensor_usage.h  csocket.cpp  csocket.h  cvirtual_sensor_config.cpp  cvirtual_sensor_config.h  physical_sensor.cpp  physical_sensor.h  sensor_base.cpp  sensor_base.h  sensor_common.h  sensor_fusion.cpp  sensor_fusion.h  sensor_hal.cpp  sensor_hal.h  (+11 more)
sensord-1.1.17/src/temperature/: CMakeLists.txt  temperature_sensor.cpp  temperature_sensor.h  temperature_sensor_hal.cpp  temperature_sensor_hal.h
sensord-1.1.17/src/ultraviolet/: CMakeLists.txt  ultraviolet_sensor.cpp  ultraviolet_sensor.h  ultraviolet_sensor_hal.cpp  ultraviolet_sensor_hal.h
sensord-1.1.17/src/uncal_geo/: CMakeLists.txt  uncal_geo_sensor.cpp  uncal_geo_sensor.h  uncal_geo_sensor_hal.cpp  uncal_geo_sensor_hal.h
sensord-1.1.17/src/uncal_gyro/: CMakeLists.txt  uncal_gyro_sensor.cpp  uncal_gyro_sensor.h  uncal_gyro_sensor_hal.cpp  uncal_gyro_sensor_hal.h
(+11 files in other folders)
